# adkit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: launch-campaign.md  make-creative.md
.claude/skills/adkit/: SKILL.md
.github/workflows/: ci.yml  publish.yml
adkit/: __init__.py  cli.py  config.py  core.py  creative_gen.py  graph.py  mcp_server.py  optimize.py  research.py
adkit/commands/: ad.py  adset.py  automate.py  campaign.py  creative.py  demo.py  generate.py  leadform.py  optimize.py  research.py  targeting.py  verify.py
adkit/data/: example_brief.yaml
docs/: architecture.md  claude-code.md  setup-token.md
docs/launch/: distribution-checklist.md  reddit-ppc.md  show-hn.md  x-thread.md
examples/audiences/: agent_builders.json
examples/briefs/: example.yaml
tests/: test_brief.py  test_core.py  test_demo.py  test_optimize.py  test_research.py  test_security.py
