[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name is `meta-adkit` because `adkit` is taken on PyPI by an
# unrelated project. The import package and the CLI command stay `adkit`
# (distribution name != import name is normal, cf. beautifulsoup4 -> bs4).
name = "meta-adkit"
version = "0.1.3"
description = "Plug-and-play Meta (Facebook + Instagram) ads automation, drivable from the terminal or Claude Code, with AI creative generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jatin Jain" }]
keywords = ["meta", "facebook", "instagram", "ads", "marketing", "automation", "cli", "claude-code", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.31",
    "click>=8.1",
]

[project.optional-dependencies]
# YAML briefs for `adkit automate launch`. JSON briefs work without this.
yaml = ["pyyaml>=6.0"]
# Run adkit as an MCP server so any agent can call its tools.
mcp = ["mcp>=1.2"]
# Everything, plus dev tooling.
dev = ["pyyaml>=6.0", "mcp>=1.2", "pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/jatinjain25/adkit"
Issues = "https://github.com/jatinjain25/adkit/issues"

[project.scripts]
adkit = "adkit.cli:cli"
adkit-mcp = "adkit.mcp_server:main"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["adkit*"]

[tool.setuptools.package-data]
# Ship the example brief inside the wheel so `adkit demo` / `adkit init` work
# for pipx and plugin installs that have no repo checkout.
adkit = ["data/*.yaml"]
